--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "prettier-check src/**/*.js && react-scripts test",
     "eject": "react-scripts eject",
